<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="provider" translatable="false">com.kitadigi.poskita.provider</string>
    <string name="app_name" tools:ignore="MissingTranslation">Pos Kita</string>
    <string name="hint_username">Masukkan username</string>
    <string name="hint_password">Masukkan password</string>
    <string name="tampilkan_password" translatable="false">Tampilkan password   </string>
    <string name="tersimpan_offline" translatable="false">Tersimpan offline</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada koneksi internet</string>
    <string name="anda_ingin_keluar_aplikasi">Anda ingin keluar aplikasi?</string>
    <string name="tekan_sekali_lagi_untuk_keluar_aplikasi">Tekan sekali lagi untuk keluar</string>
    <string name="login">LOGIN</string>
    <string name="login_success">Success!</string>
    <string name="gagal_mengambil_gambar" translatable="false">Gagal mengambil gambar, silahkan coba lagi</string>
    <string name="login_fail">Fail!</string>
    <string name="hapus">Hapus data?</string>
    <string name="hapus_semua" translatable="false">Hapus semua</string>
    <string name="kitadigi_poskita" translatable="false">KITADIGI POSKITA</string>
    <string name="now_loading">Now loading...</string>
    <string name="proses_sinkron_telah_selesai" translatable="false">Proses sinkron telah selesai</string>
    <string name="proses_sinkron_dimulai" translatable="false">Proses sinkron dimulai...</string>
    <string name="proses_sinkron_sedang_diproses" translatable="false">Proses sinkron sedang diproses...</string>
    <string name="bayar">Bayar</string>
    <string name="login_true">login_true</string>
    <string name="validasi_login">Username dan password harus diisi</string>
    <string name="logout">Logout</string>
    <string name="mau_logout">Apakah Anda akan logout?</string>
    <string name="apakah_anda_yakin_akan_menghapus">Apakah Anda yakin akan menghapus data ini?</string>
    <string name="data_tidak_dapat_dikembalikan">Data tidak dapat dikembalikan</string>
    <string name="tidak_ada_penjualan">Tidak ada penjualan</string>
    <string name="tidak_ada_pembelian">Tidak ada pembelian</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="simpan">Simpan</string>
    <string name="saya_sudah_bayar" translatable="false">Saya sudah bayar</string>
    <string name="tidak_ada_input" translatable="false">Tidak ada input</string>
    <string name="simpan_semua" translatable="false">Simpan semua</string>
    <string name="input_telah_tersimpan" translatable="false">Input telah tersimpan</string>
    <string name="edit">Edit</string>
    <string name="ubah">Ubah</string>
    <string name="batal">Batal</string>
    <string name="tambah">Tambah</string>
    <string name="total">Total</string>
    <string name="selanjutnya">SELANJUTNYA</string>
    <string name="session_expired">session_expired</string>
    <string name="silakan_login_lagi">Silakan login kembali</string>
    <string name="item_berhasil_ditambahkan"> berhasil ditambahkan</string>
    <string name="success">success</string>
    <string name="sukses">Sukses</string>
    <string name="tutup">Tutup</string>
    <string name="transaksi_berhasil">Transaksi berhasil</string>
    <string name="nama_kategori">Nama kategori</string>
    <string name="kode_kategori">Kode kategori</string>
    <string name="nama_kategori_harus_diisi">Nama kategori harus diisi</string>
    <string name="nama_unit">Nama unit</string>
    <string name="nama_supplier">Nama supplier</string>
    <string name="singkatan_unit">Singkatan</string>
    <string name="dibayar">Jumlah pembayaran (Rp)</string>
    <string name="nomor_referensi">Nomor referensi</string>
    <string name="tanggal" translatable="false">Tanggal</string>
    <string name="nama_unit_harus_diisi">Nama unit harus diisi</string>
    <string name="total_pembelian">Total pembelian (Rp)</string>
    <string name="nama_brand">Nama brand</string>
    <string name="nama" translatable="false">Nama</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="grafik_penjualan" translatable="false">Grafik Penjualan</string>
    <string name="grafik_item_penjualan" translatable="false">Grafik Item Penjualan</string>
    <string name="grafik_rasio" translatable="false">Rasio Penjualan dan Pembelian</string>
    <string name="grand_total_penjualan" translatable="false">Grand Total Penjualan</string>
    <string name="grand_total_pembelian" translatable="false">Grand Total Pembelian</string>
    <string name="total_item_penjualan" translatable="false">Total Item Penjualan</string>
    <string name="izin_akses_kamera_diperlukan" translatable="false">Izin akses kamera diperlukan</string>
    <string name="deskripsi_brand">Deskripsi brand</string>
    <string name="alamat_pemilik" translatable="false">Alamat pemilik (wajib diisi)</string>
    <string name="data_tidak_dapat_dihapus" translatable="false">Data tidak dapat dihapus, karena sudah dipakai</string>
    <string name="alamat_toko" translatable="false">Alamat toko (wajib diisi)</string>
    <string name="jenis_toko" translatable="false">Jenis toko (wajib diisi)</string>
    <string name="email" translatable="false">Email</string>
    <string name="nama_toko" translatable="false">Nama toko (wajib diisi)</string>
    <string name="telepon" translatable="false">Telepon</string>
    <string name="nama_brand_harus_diisi">Nama brand harus diisi</string>
    <string name="insert_ok">Data telah ditambahkan</string>
    <string name="update_ok">Data telah diupdate</string>
    <string name="delete_ok">Data telah dihapus</string>
    <string name="new_transactions_header">Transaksi Baru</string>
    <string name="find_items_header">Cari Barang</string>
    <string name="remark_pos">POS</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="remark_pembelian">Pembelian</string>
    <string name="remark_report">Report</string>
    <string name="remark_items">Items</string>
    <string name="remark_printer" translatable="false">Printer</string>
    <string name="remark_wholesale">Wholesale</string>
    <string name="barkode_tidak_ditemukan" translatable="false">Barkode tidak ditemukan</string>
    <string name="remark_sinkron" translatable="false">Sinkron data</string>
    <string name="pengaturan_sinkron" translatable="false">Pengaturan alarm sinkron</string>
    <string name="alarm_dimatikan" translatable="false">Alarm dimatikan</string>
    <string name="alarm_diaktifkan" translatable="false">Alarm diaktifkan</string>
    <string name="matikan_alarm" translatable="false">Matikan alarm</string>
    <string name="interval" translatable="false">Interval</string>
    <string name="lima_menit" translatable="false">5 menit</string>
    <string name="satu_jam" translatable="false">1 jam</string>
    <string name="dua_jam" translatable="false">2 jam</string>
    <string name="satu_hari" translatable="false">1 hari</string>
    <string name="remark_profile">Profil</string>
    <string name="input_massal" translatable="false">Input massal</string>
    <string name="openDrawer">Buka drawer</string>
    <string name="closeDrawer">Tutup drawer</string>
    <string name="tambah_kategori">Tambah kategori</string>
    <string name="tambah_produk" translatable="false">Tambah produk</string>
    <string name="tambah_brand">Tambah brand</string>
    <string name="pilih_propinsi" translatable="false">Pilih propinsi</string>
    <string name="pilih_kota" translatable="false">Pilih kota</string>
    <string name="pilih_kecamatan" translatable="false">Pilih kecamatan</string>
    <string name="scan_qrcode_gopay" translatable="false">Scan Kode QR Gopay</string>
    <string name="pilih_barang" translatable="false">Pilih barang</string>
    <string name="grafik_penjualan_harian" translatable="false">Grafik Penjualan Harian</string>
    <string name="pengaturan_printer" translatable="false">Pengaturan Printer</string>
    <string name="cetak_struk_lama" translatable="false">Cetak struk lama</string>
    <string name="tidak_dapat_terhubung_dengan_server" translatable="false">Tidak dapat terhubung dengan server</string>
    <string name="register" translatable="false">REGISTER</string>
    <string name="registrasi" translatable="false">REGISTRASI</string>
    <string name="terimakasih_sudah_melakukan_register" translatable="false">Terima kasih telah melakukan register</string>
    <string name="mohon_menunggu_konfirmasi_dari_admin_kami" translatable="false">Mohon menunggu konfirmasi dari admin kami</string>
    <string name="print_preview">Print preview</string>
    <string name="tambah_unit">Tambah unit</string>
    <string name="edit_unit">Edit unit</string>
    <string name="edit_brand">Edit brand</string>
    <string name="edit_kategori">Edit kategori</string>
    <string name="remark_qty">Qty Pembelian</string>
    <string name="remark_address_header">Tambah alamat</string>
    <string name="remark_items_header">Tambah Item</string>
    <string name="remark_items_name">Nama Item</string>
    <string name="remark_items_unit">Unit/satuan</string>
    <string name="remark_item_brand">Brand</string>
    <string name="bluetooth_disconnect">Bluetooth disconnected!</string>
    <string name="bluetooth_connect">Bluetooth connected</string>
    <string name="remark_kategori">Kategori</string>
    <string name="remark_items_price">Harga Items</string>
    <string name="remark_items_price_buy">Harga Beli</string>
    <string name="remark_items_price_sell">Harga Jual</string>
    <string name="remark_barkode">Barkode</string>
    <string name="remark_stok">Stok</string>
    <string name="remark_stok_minimum">Stok minimum</string>
    <string name="stok_kosong">Stok tidak tersedia</string>
    <string name="remark_items_image">Foto Items</string>
    <string name="remark_items_image_take">Ambil Foto</string>
    <string name="remark_items_button">Save</string>
    <string name="remark_items_finish_button">Selesai</string>
    <string name="remark_items_finish_cancel">Batal</string>
    <string name="remark_items_change_back">Uang Kembali</string>
    <string name="remark_items_transactions">Transaksi berhasil</string>
    <string name="remark_transactions_detail_header">Konfirmasi Penjualan</string>
    <string name="remark_sub_pembelian">Konfirmasi Pembelian</string>
    <string name="remark_transactions_detail_orders">Penjualan Anda</string>
    <string name="pembelian_anda">Pembelian Anda</string>
    <string name="pembelian" translatable="false">Pembelian</string>
    <string name="remark_payment">Metode Pembayaran</string>
    <string name="remark_payment_choose">Pilih Metode Pembayaran</string>
    <string name="remark_payment_cash">Tunai</string>
    <string name="remark_payment_soon">Bayar Nanti</string>
    <string name="bayar_dengan_gopay" translatable="false">Bayar dengan Gopay</string>
    <string name="remark_payment_detail">Detail Pembayaran</string>
    <string name="remark_payment_subtotal">Subtotal</string>
    <string name="remark_payment_total">Total</string>
    <string name="remark_payment_header">Pembayaran</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="display">1</string>
    <string name="qty_penjualan">Jumlah</string>
    <string name="label_qty_penjualan">Jumlah : </string>
    <string name="label_harga_jual">Harga jual :</string>
    <string name="label_subtotal">Subtotal : </string>
    <string name="ok">OK</string>
    <string name="label_tipe_transaksi">Tipe transaksi</string>
    <string name="label_no_transaksi">No. transaksi</string>
    <string name="label_status_transaksi">Status transaksi</string>
    <string name="label_status_pembayaran">Status pembayaran</string>
    <string name="label_tanggal_pembayaran">Tanggal pembayaran</string>
    <string name="label_jumlah">Jumlah</string>
</resources>