<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:padding="@dimen/dimen_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">


        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_tipe_transaksi"
                    android:text="@string/label_tipe_transaksi">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_tipe_transaksi"
                    android:text="@string/label_tipe_transaksi">

                </TextView>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_no_transaksi"
                    android:text="@string/label_no_transaksi">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_no_transaksi"
                    android:text="@string/label_no_transaksi">

                </TextView>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_status_pembayaran"
                    android:text="@string/label_status_pembayaran">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_status_pembayaran"
                    android:text="@string/label_status_pembayaran">

                </TextView>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_status_transaksi"
                    android:text="@string/label_status_transaksi">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_status_transaksi"
                    android:text="@string/label_status_transaksi">

                </TextView>

            </TableRow>



            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_tanggal_pembayaran"
                    android:text="@string/label_tanggal_pembayaran">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_tanggal_pembayaran"
                    android:text="@string/label_tanggal_pembayaran">

                </TextView>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_jumlah"
                    android:text="@string/label_jumlah">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_jumlah"
                    android:text="@string/label_jumlah">

                </TextView>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>