<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/colorRed">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:src="@drawable/ic_baseline_arrow_back_24px"
            android:layout_marginStart="@dimen/dimen_10"
            android:tint="@color/colorWhite"
            android:clickable="true"
            android:focusable="true"
            android:layout_centerVertical="true"
            tools:ignore="contentDescription"/>

        <TextView
            android:id="@+id/tv_nav_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_16"
            android:layout_marginStart="@dimen/dimen_10"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/pengaturan_sinkron"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="@dimen/dimen_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="@dimen/dimen_20"
                    android:text="@string/interval"
                    android:id="@+id/tv_interval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_10"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:text="@string/satu_jam"
                        android:id="@+id/radio_satu_jam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </RadioButton>

                    <RadioButton
                        android:text="@string/dua_jam"
                        android:id="@+id/radio_dua_jam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </RadioButton>

                    <RadioButton
                        android:checked="true"
                        android:text="@string/satu_hari"
                        android:id="@+id/radio_satu_hari"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </RadioButton>


                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_10"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan"
                    android:textColor="@color/colorWhite"
                    style="@style/dialog_red_button"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:layout_marginEnd="@dimen/dimen_10"
                    android:layout_marginBottom="30dp"
                    android:layout_centerVertical="true"/>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</LinearLayout>