<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_10"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dimen_60"
            android:layout_height="@dimen/dimen_60"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/dimen_10"
            tools:ignore="contentDescription"
            />
        <LinearLayout
            android:layout_toEndOf="@+id/iv_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tv_name_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/remark_report"
                android:textSize="@dimen/text_14"
                />

            <TableLayout
                android:stretchColumns="*"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_label_quantity"
                        android:text="@string/label_qty_penjualan">

                    </TextView>

                    <TextView
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_quantity"
                        android:text="@string/qty_penjualan">

                    </TextView>

                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_label_unit_price"
                        android:text="@string/label_harga_jual">

                    </TextView>

                    <TextView
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_unit_price"
                        android:text="@string/qty_penjualan">

                    </TextView>

                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_label_subtotal"
                        android:text="@string/label_subtotal">

                    </TextView>

                    <TextView
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_subtotal"
                        android:text="@string/qty_penjualan">

                    </TextView>

                </TableRow>



            </TableLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>