<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal|center_vertical"
    android:gravity="center_vertical|center_horizontal"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.login.LoginActivity">


    <ImageView
        android:layout_marginBottom="@dimen/dimen_50"
        android:id="@+id/ivLogo"
        android:src="@drawable/ic_logo_depan"
        android:layout_width="300dp"
        android:layout_height="100dp"/>

    <EditText android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:textColor="@color/colorGrey"
        android:hint="@string/hint_username"
        android:textSize="@dimen/text_12"
        android:padding="@dimen/dimen_10"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:imeOptions="actionNext"
        android:background="@drawable/button_rounded_white"
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:textColorHint="@color/colorGrey"
        />

    <EditText android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/colorGrey"
        android:hint="@string/hint_password"
        android:textSize="@dimen/text_12"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:imeOptions="actionNext"
        android:background="@drawable/button_rounded_white"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:textColorHint="@color/colorGrey"
        />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        style="@style/dialog_red_button"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_centerVertical="true"/>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        style="@style/dialog_red_button"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_centerVertical="true"/>


    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="Version 0.1.0"
        android:textColor="@color/colorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>